# auto_register_for_specta

./: Cargo.toml
local_macro/: Cargo.toml
local_macro/src/: function.rs  info.rs  lib.rs
src/: lib.rs
