[package]
name = "local_macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
toml = "0.9.8"
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1.41", optional = true }
thiserror = "2.0.12"
walkdir = "2.5.0"
syn = { version = "2.0.100", features = ["full"] }
tauri-specta = { version = "2.0.0-rc.21", features = [
    "javascript",
    "typescript",
] }

[dependencies.quote]
version = "1.0.38"

[dependencies.proc-macro2]
version = "1.0.93"

[dependencies.proc-macro-error]
version = "1.0.4"

[features]
tracing = ["dep:tracing"]
